--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PokeAPI</title>
+    <title>PokeDex</title>
     <link rel="icon" type="image/x-icon" href="img/pokeAPI.png">
     <link rel="stylesheet" href="css/estilos.css">
 
@@ -14,7 +14,7 @@
         <label for="nav-toggle" class="nav-icon">&#9776;</label>
         <nav class="nav">
             <ul class="nav-list">
-                <img src="00_Ejemplo/pokedex/resultado-final/img/logo.png" alt="Pokemon logo">
+                <img src="img\logo.png" alt="Pokemon logo">
                 <li class="nav-item"><button class="btn btn-header" id="ver-todos">Ver todos</button></li> 
                 <li class="nav-item"><button class="btn btn-header fire" id="fire">Fuego</button></li>
                 <li class="nav-item"><button class="btn btn-header poison" id="poison">Poison</button></li>
