--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <input type="checkbox" id="nav-toggle">
         <label for="nav-toggle" class="nav-icon">&#9776;</label>
         <nav class="nav">
-            <img src="img\logo.png" alt="Pokemon logo">
+            <img src="img/logo.png" alt="Pokemon logo">
             <ul class="nav-list">
                 <li class="nav-item"><button class="btn btn-header" id="ver-todos">Ver todos</button></li> 
                 <li class="nav-item"><button class="btn btn-header fire" id="fire">Fuego</button></li>
@@ -45,6 +45,9 @@
         </div>
 
     </main>
+    <script src="./js/model.js"></script>
     <script src="./js/request.js"></script>
+    <script src="./js/index-controler.js"></script>
+    <script src="./js/index-view.js"></script>
 </body>
 </html>
